<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true" >
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/amountEditText"
            android:hint="@string/amount"
            android:layout_marginTop="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            style="@style/TextField"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alipay"
            android:id="@+id/alipayButton"
            android:layout_below="@+id/amountEditText"
            android:layout_marginTop="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            style="@style/GrayBoaderButton"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wechat"
            android:id="@+id/wechatButton"
            android:layout_below="@+id/alipayButton"
            android:layout_marginTop="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            style="@style/GrayBoaderButton"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upmp"
            android:id="@+id/upmpButton"
            android:layout_below="@+id/wechatButton"
            android:layout_marginTop="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            style="@style/GrayBoaderButton"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bfb"
            android:id="@+id/bfbButton"
            android:layout_below="@+id/upmpButton"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            style="@style/GrayBoaderButton"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="需要配资"
            android:id="@+id/deposit_switch"
            android:layout_below="@+id/bfbButton"
            android:layout_marginBottom="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="资方配资金额:"
            android:id="@+id/deposit_text"
            android:layout_below="@+id/deposit_switch"
            android:layout_marginBottom="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp" />


    </RelativeLayout>
</ScrollView>
